[gd_scene load_steps=5 format=3 uid="uid://xd18phyc65a4"]

[ext_resource type="Script" path="res://Main.gd" id="1_dp0bb"]
[ext_resource type="Theme" uid="uid://dlj61kmlfqo6u" path="res://Assets/SimpleTheme.tres" id="2_pmt5p"]
[ext_resource type="PackedScene" uid="uid://d1psmtcks6grj" path="res://Character.tscn" id="2_wb6e8"]
[ext_resource type="Script" path="res://Menu.gd" id="5_ebrtj"]

[node name="Main" type="Node"]
script = ExtResource("1_dp0bb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.372549)
metadata/_edit_group_ = true

[node name="CC_Editor" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_pmt5p")

[node name="C_Editor" type="Control" parent="CC_Editor"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBC_Editor" type="HBoxContainer" parent="CC_Editor/C_Editor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -239.0
offset_right = 448.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="VBC_CharacterPreview" type="VBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PreviewBackground" type="TextureRect" parent="CC_Editor/C_Editor/HBC_Editor/VBC_CharacterPreview"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 2

[node name="HBC_Peview" type="HBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor/VBC_CharacterPreview/PreviewBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MC_Preview" type="MarginContainer" parent="CC_Editor/C_Editor/HBC_Editor/VBC_CharacterPreview/PreviewBackground/HBC_Peview"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Character" parent="CC_Editor/C_Editor/HBC_Editor/VBC_CharacterPreview/PreviewBackground/HBC_Peview/MC_Preview" instance=ExtResource("2_wb6e8")]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBC_Menu" type="VBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 1
script = ExtResource("5_ebrtj")

[node name="C_Head" type="Control" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Head" type="Label" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Head"
vertical_alignment = 2

[node name="HBC_Head" type="HBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head/VBoxContainer"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
theme_override_constants/separation = 5

[node name="Prev" type="Button" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head/VBoxContainer/HBC_Head"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
text = "<"

[node name="Head_Label" type="Label" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head/VBoxContainer/HBC_Head"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Head 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head/VBoxContainer/HBC_Head/Head_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="Next" type="Button" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head/VBoxContainer/HBC_Head"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
text = ">"

[node name="C_Body" type="Control" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Body
"
vertical_alignment = 2

[node name="HBC_Body" type="HBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Prev" type="Button" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body/VBoxContainer/HBC_Body"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
text = "<"

[node name="Body_Label" type="Label" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body/VBoxContainer/HBC_Body"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Body 1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body/VBoxContainer/HBC_Body/Body_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="Next" type="Button" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body/VBoxContainer/HBC_Body"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
text = ">"

[node name="C_TShort" type="Control" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "T-shirt"
vertical_alignment = 2

[node name="BHC_TShirt" type="HBoxContainer" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Prev" type="Button" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort/VBoxContainer/BHC_TShirt"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
text = "<"

[node name="TShirt_Label" type="Label" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort/VBoxContainer/BHC_TShirt"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "T-shirt 1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort/VBoxContainer/BHC_TShirt/TShirt_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="Next" type="Button" parent="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort/VBoxContainer/BHC_TShirt"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
text = ">"

[connection signal="character_change" from="." to="CC_Editor/C_Editor/HBC_Editor/VBC_Menu" method="on_prsset_change"]
[connection signal="button_up" from="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head/VBoxContainer/HBC_Head/Prev" to="." method="_on_head_prew_pressed"]
[connection signal="button_up" from="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Head/VBoxContainer/HBC_Head/Next" to="." method="_on_head_next_pressed"]
[connection signal="button_up" from="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body/VBoxContainer/HBC_Body/Prev" to="." method="_on_body_prew_pressed"]
[connection signal="button_up" from="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_Body/VBoxContainer/HBC_Body/Next" to="." method="_on_body_next_pressed"]
[connection signal="button_up" from="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort/VBoxContainer/BHC_TShirt/Prev" to="." method="_on_tSirt_prev_pressed"]
[connection signal="button_up" from="CC_Editor/C_Editor/HBC_Editor/VBC_Menu/C_TShort/VBoxContainer/BHC_TShirt/Next" to="." method="_on_tSirt_next_pressed"]
